[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hvae"
version = "0.0.0"
authors = [
  { name="NeuroStats Lab" },
]
description = "Tool for conditional generation of gerbil vocal calls"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = "MIT"
dependencies = [
    "h5py>=3.9.0",
    "matplotlib>=3.8.0",
    "numpy>=1.24.0",
    "pyjson5>=1.6.0",
    "scipy>=1.11.0",
    "torch>=2.0.0",
    "torchaudio>=2.0.0",
    "tqdm>=4.66.0"
]

[project.urls]
Homepage = "https://github.com/neurostatslab/vocalocator"
Issues = "https://github.com/neurostatslab/vocalocator/issues"